# Chess

./: .gitignore  Cargo.toml  README.md  build.rs
res/: credit.txt
src/: ability.rs  audio_g.rs  death.rs  game_data.rs  help.rs  home.rs  key_map.rs  main.rs  particles_fnc.rs  player.rs
