[package]
name = "bare-king"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3"
rand = "0.8.5"
macroquad-particles = "0.1.1"
savefile="0.10"
savefile-derive="0.10"
strum = "0.24"
strum_macros = "0.24"
image = "0.24.3"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
debug=false

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.dev.package.'*']
opt-level = 3

[build-dependencies]
fs_extra = "1.2.0"
